# pytest-qa-prep

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/clients/: auth_client.py  base_client.py  booking_client.py
api/models/: auth.py  booking.py
api/tests/: test_create_booking.py  test_delete_booking.py  test_get_booking.py  test_update_booking.py
config/: .env.example  settings.py
docs/: ARCHITECTURE.md
legacy/: calculator.py
legacy/tests/: test_calculator_add.py  test_calculator_divide.py  test_calculator_edge_cases.py  test_calculator_multiply.py  test_calculator_substract.py
ui/: README.md  conftest.py
ui/pages/: base_page.py  booking_page.py  login_page.py
ui/tests/: test_booking.py  test_login.py
utils/: assertions.py  constants.py  data_generator.py
week1_pytest/tests/: test_calculator.py  test_calculator_edge_cases.py  test_calculator_multiply.py
