[project]
name = "pytest-qa-prep"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["api/tests", "ui/tests", "legacy"]
markers = [
    "smoke: fast critical-path checks",
    "regression: full regression suite",
    "api: tests hitting the API layer",
    "ui: tests driving the browser",
]

[tool.ruff]
line-length = 100
target-version = "py311"
